--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
         <div class="policy-card">
             <h2>10. Bize Ulaşın</h2>
-            <p>Bu Gizlilik Politikası hakkında sorularınız veya endişeleriniz varsa, lütfen bize privacy@patify.com adresinden veya uygulama içindeki destek bölümünden ulaşın.</p>
+            <p>Bu Gizlilik Politikası hakkında sorularınız veya endişeleriniz varsa, lütfen bize contact@patify.com adresinden veya uygulama içindeki destek bölümünden ulaşın.</p>
         </div>
 
         <div style="text-align: center;">
